Fix background image scaling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 }
 
 html {
+  height: 100%;
+  width: 100%;
   min-width: 300px;
 }
 
